[package]
name = "wolfsheepgrass"
version = "0.1.0"
edition = "2021"

[dependencies]
# Remove dynamic when release
bevy = { version = "0.11", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.17", features = ["2d", "3d", "standard_dynamic_assets"] }
bevy_panorbit_camera = "0.6"
bevy_sprite3d = "2.5"
rand = "0.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
